# myocr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile-infer  Dockerfile-infer-CPU  Makefile  README.md  README_zh.md  RELEASE_PROCESS.md  logging_config.yaml  main.py  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/workflows/: build_publish_release_docs.yml  main.yml  pr_checks.yml  publish_docs.yml  release_docker_image.yml  trigger-hf-rebuild.yml  trigger_hf_rebuild.yml
docs/source/: conf.py  installation.md
documentation/: mkdocs.yml
documentation/docs/: index.md  overview.md
documentation/docs/assets/stylesheets/: extra.css
documentation/docs/en/: faq.md  index.md
documentation/docs/en/getting-started/: installation.md  overview.md
documentation/docs/en/inference/: local.md  rest.md
documentation/docs/en/models/: add-model.md  index.md  model-list.md  new-model.md  train-model.md
documentation/docs/en/pipelines/: build-pipeline.md  index.md  ocr.md  pipelines-list.md  structured-ocr.md
documentation/docs/en/predictors/: build-predictor.md  converters.md  create-predictor.md  index.md  predictor-list.md  predictors.md
documentation/docs/getting-started/: installation.md
documentation/docs/models/: model-list.md
documentation/docs/zh/: CHANGELOG.md  CONTRIBUTING.md  faq.md  index.md
documentation/docs/zh/getting-started/: installation.md  overview.md
documentation/docs/zh/inference/: local.md  rest.md
documentation/docs/zh/models/: add-model.md  index.md  model-list.md  new-model.md  train-model.md
documentation/docs/zh/pipelines/: build-pipeline.md  index.md  pipelines-list.md
documentation/docs/zh/predictors/: create-predictor.md  index.md  new-predictor.md
documentation/overrides/: main.html
documentation/overrides/partials/: comments.html
main/: 404.html  index.html  sitemap.xml
main/CHANGELOG/: index.html
main/CONTRIBUTING/: index.html
main/assets/stylesheets/: extra.css
main/faq/: index.html
main/getting-started/installation/: index.html
main/getting-started/overview/: index.html
main/inference/local/: index.html
main/inference/rest/: index.html
main/models/: index.html
main/models/add-model/: index.html
main/models/model-list/: index.html
main/models/new-model/: index.html
main/models/train-model/: index.html
main/pipelines/: index.html
main/pipelines/build-pipeline/: index.html
main/pipelines/ocr/: index.html
main/pipelines/pipelines-list/: index.html
main/pipelines/structured-ocr/: index.html
main/predictors/: index.html
main/predictors/build-predictor/: index.html
main/predictors/converters/: index.html
main/predictors/create-predictor/: index.html
main/predictors/new-predictor/: index.html
main/predictors/predictor-list/: index.html
main/predictors/predictors/: index.html
main/search/: search_index.json
main/zh/: index.html
main/zh/CHANGELOG/: index.html
main/zh/CONTRIBUTING/: index.html
main/zh/faq/: index.html
main/zh/getting-started/installation/: index.html
main/zh/getting-started/overview/: index.html
main/zh/inference/local/: index.html
main/zh/inference/rest/: index.html
main/zh/models/: index.html
main/zh/models/add-model/: index.html
main/zh/models/model-list/: index.html
main/zh/models/new-model/: index.html
main/zh/models/train-model/: index.html
main/zh/pipelines/: index.html
main/zh/pipelines/build-pipeline/: index.html
main/zh/pipelines/ocr/: index.html
main/zh/pipelines/pipelines-list/: index.html
main/zh/pipelines/structured-ocr/: index.html
main/zh/predictors/: index.html
main/zh/predictors/build-predictor/: index.html
main/zh/predictors/converters/: index.html
main/zh/predictors/create-predictor/: index.html
main/zh/predictors/new-predictor/: index.html
models/: mlp.onnx
myocr/: __init__.py  base.py  config.py  logging_config.yaml  types.py  util.py  utils.py  version.py
myocr/extractor/: __init__.py  base.py  chat_extractor.py
myocr/modeling/: README.md  __init__.py  activation.py  mlp.py  model.py  util.py  utils.py
myocr/modeling/architectures/: __init__.py  base_model.py
myocr/modeling/backbones/: __init__.py  mlp.py  mobilenet.py  svtrnet.py
myocr/modeling/configs/: cls_mv3.yaml  mlp.yaml
myocr/modeling/heads/: __init__.py  att_head.py  cls_head.py  ctc_head.py  db_head.py
myocr/modeling/necks/: __init__.py  rnn.py
myocr/modeling/transforms/: __init__.py  tps.py
myocr/models/: loader.py  model.py  modules.py  trainer.py  vgg_model.py
myocr/models/DBNet/: DBNet.py
myocr/models/DBNet/model/: model.py  (+2 more)
myocr/notebooks/: sample_invoice_pipeline.ipynb  sample_invoice_recognition.ipynb  sample_ocr_predictor.ipynb  sample_text_detection.ipynb  sample_text_direction.ipynb  sample_text_recognition.ipynb  train_cls_notebook.ipynb  train_custom_notebook.ipynb  train_mlp_notebook.ipynb
myocr/pipelines/: __init__.py  common_ocr_pipeline.py  document_ocr_pipeline.py  ocr_extract_info_pipeline.py  response_format.py  structured_output_pipeline.py
myocr/pipelines/config/: common_ocr_pipeline.yaml  structured_output_pipeline.yaml
myocr/predictors/: __init__.py  base.py  classification_predictor.py  ocr_predictor.py  text_detection_predictor.py  text_direction_predictor.py  text_recognition_predictor.py
myocr/processors/: __init__.py  base.py  chat_processor.py  doc_processor.py  img_classification_processor.py  ocr_processor.py  text_detection_processor.py  text_direction_processor.py  text_recognition_processor.py
myocr/training/: base.py  train_mlp_notebook.ipynb
notebooks/: sample_pipelines.ipynb  sample_predictors.ipynb  sample_train_notebook.ipynb
scripts/: build_docker_image.sh  prepare_changelog.py  release.sh
tests/: hello_test.py  image_classification_test.py  invoice_recognition_test.ipynb  ocr_result.json  processors_test.py  text_dection_test.ipynb  text_detection_test.ipynb  text_recognition_test.ipynb  types_test.py
(+20 files in other folders)
