[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# See https://setuptools.pypa.io/en/latest/userguide/quickstart.html for more project configuration options.
name = "myocr"
dynamic = ["version"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    {name = "Robby", email = "robby.zhaox@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
  "torch>=2.5.1",
  "pillow==11.2.0",
  "numpy==2.2.4",
  "cv-3==1.2.0",
  "shapely==2.0.7",
  "pyclipper~=1.3.0",
  "pathlib2~=2.3.7",
  "scipy==1.15.2",
  "torchvision==0.21.0",
  "onnxruntime==1.21.0"
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/robbyzhaox/myocr"
Repository = "https://github.com/robbyzhaox/myocr"
Changelog = "https://github.com/robbyzhaox/myocr/blob/main/CHANGELOG.md"
# Documentation = "https://myocr.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy>=1.0,<2.0",
    "black>=23.0,<26.0",
    "isort>=5.12,<6.1",
    "pytest",
    "pytest-sphinx",
    "pytest-cov",
    "twine>=1.11.0",
    "build",
    "setuptools",
    "wheel",
    "Sphinx>=6.0,<9.0",
    "furo==2024.8.6",
    "myst-parser>=1.0",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints==3.1.0",
    "packaging"
]

[tool.setuptools.packages.find]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
    "docs*",
    "scripts*"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
myocr = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "myocr.version.VERSION"}

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

# You can override these pyright settings by adding a personal pyrightconfig.json file.
[tool.pyright]
reportPrivateImportUsage = false

[tool.ruff]
line-length = 115
target-version = "py311"
extend-exclude = [
    "myocr/models/**",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
strict_optional = false

[[tool.mypy.overrides]]
module = "myocr.util"
ignore_errors = true 

[tool.pytest.ini_options]
testpaths = "tests/"
python_classes = [
  "Test*",
  "*Test",
  "*test"
]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
log_cli = true
